<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="b1ViewModel"
            type="bdl.lockey.ghtk_ex2.ui.b1.B1ViewModel" />
        <variable
            name="b1Fragment"
            type="bdl.lockey.ghtk_ex2.ui.b1.B1Fragment" />
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_require"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/require1"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/string_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/type_here"
                app:layout_constraintTop_toBottomOf="@id/textView_require">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/string_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onTextChanged="@{() -> b1Fragment.checkErrorTextField()}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/calculate"
                android:onClick="@{() -> b1Fragment.submitString()}"
                app:layout_constraintTop_toBottomOf="@id/string_input_layout" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{b1ViewModel.result}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintTop_toBottomOf="@id/btn_calculate"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>